--- a/src/components/Card/style.module.scss
+++ b/src/components/Card/style.module.scss
@@ -1,10 +1,11 @@
+
 .cardContainer {
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     position: sticky;
-    top: 0px;
+    top: 50px; //Was 0px
 
     .card {
         display: flex;
@@ -71,6 +72,12 @@
                 img {
                     object-fit: cover;
                 }
+
+            }
+
+            .imageContainer:hover{
+                cursor: pointer;
+                
             }
         }
     }
