--- a/src/components/Card/style.module.scss
+++ b/src/components/Card/style.module.scss
@@ -29,11 +29,13 @@
             height: 100%;
             margin-top: 50px;
             gap: 50px;
+            overflow: hidden;
 
             .description {
                 width: 40%;
                 position: relative;
                 top: 10%;
+                overflow: scroll;
 
                 p {
                     font-size: 16px;
