--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -7,10 +7,12 @@
 
     h1{
         font-size: 50px;
+        color: #ffffff;
     }
 
     @media (max-width: 720px){
-        font-size: 30px;
-    }
-    
+        h1 {
+          font-size: 30px;
+        }
+      }
 }
