--- a/src/components/Modal/style.module.scss
+++ b/src/components/Modal/style.module.scss
@@ -9,7 +9,7 @@
     /* Full width */
     height: 100%;
     /* Full height */
-    overflow: auto;
+    //overflow: auto;
 
     img {
         margin: auto;
