--- a/src/app/about/style.module.scss
+++ b/src/app/about/style.module.scss
@@ -1,24 +1,23 @@
-
-.cardContainer {
-    height: 100vh;
+.container {
+    height: 85vh;
     display: flex;
     align-items: center;
     justify-content: center;
     position: sticky;
-    top: 50px; //Was 0px
 
     .card {
         display: flex;
         flex-direction: column;
         position: relative;
-        top: -25%;
+        top: 1px;
         height: 500px;
         width: 1000px;
         border-radius: 25px;
         padding: 50px;
         transform-origin: top;
+        background-color: aqua;
 
-        h2 {
+        h1 {
             text-align: center;
             margin: 0px;
             font-size: 28px;
@@ -46,17 +45,6 @@
                     }
                 }
 
-                span {
-                    display: flex;
-                    align-items: center;
-                    gap: 5px;
-
-                    a {
-                        font-size: 12px;
-                        text-decoration: underline;
-                        cursor: pointer;
-                    }
-                }
             }
 
             .imageContainer {
@@ -69,6 +57,7 @@
                 .inner {
                     width: 100%;
                     height: 100%;
+                    overflow: hidden;
                 }
 
                 img {
@@ -78,9 +67,6 @@
 
             }
 
-            .imageContainer:hover{
-                cursor: pointer;
-            }
         }
     }
 }
