--- a/src/components/Card/style.module.scss
+++ b/src/components/Card/style.module.scss
@@ -1,4 +1,3 @@
-
 .cardContainer {
     height: 100vh;
     display: flex;
@@ -17,6 +16,8 @@
         border-radius: 25px;
         padding: 50px;
         transform-origin: top;
+
+        //box-shadow: rgba(238, 236, 236, 0.548) 0px 25px 50px -12px;
 
         h2 {
             text-align: center;
@@ -78,7 +79,7 @@
 
             }
 
-            .imageContainer:hover{
+            .imageContainer:hover {
                 cursor: pointer;
             }
         }
