--- a/src/components/Navbar/style.module.scss
+++ b/src/components/Navbar/style.module.scss
@@ -76,40 +76,42 @@
             }
         }
 
-        ul {
-            list-style: none;
-            margin-right: 40px;
-            align-items: center;
-
-            li {
-                margin: 20px 0;
-                overflow-y: hidden;
-                user-select: none;
-
-                div {
-                    text-align: center;
-                    text-transform: capitalize;
-                    font-size: 34px;
-                }
-
-                &:hover {
-                    font-style: italic;
-                    cursor: pointer;
-                }
-            }
-
-            a {
-                text-decoration: none;
-                color: beige;
-
-            }
-        }
-
-
         .group {
+
             align-items: center;
             flex-direction: column;
             display: flex;
+
+            ul {
+                list-style: none;
+                margin-right: 40px;
+                align-items: center;
+
+                li {
+                    margin: 20px 0;
+                    overflow-y: hidden;
+                    user-select: none;
+
+                    div {
+                        text-align: center;
+                        text-transform: capitalize;
+                        font-size: 34px;
+                    }
+
+                    &:hover {
+                        font-style: italic;
+                        cursor: pointer;
+                    }
+                }
+
+                a {
+                    text-decoration: none;
+                    color: beige;
+
+                }
+            }
+
+
 
             .contact {
                 margin-top: 80px;
@@ -122,10 +124,17 @@
                     &:first-of-type {
                         margin-right: 40px;
                     }
+
                 }
+
+                .instaLink:hover {
+                    text-decoration: none;
+                    color: beige;
+                }
+
+
             }
+
         }
-
-
     }
 }
