--- a/src/app/about/style.module.scss
+++ b/src/app/about/style.module.scss
@@ -16,13 +16,14 @@
         padding: 50px;
         transform-origin: top;
         background-color: rgb(100, 95, 95);
+        
 
 
-        /*transform: perspective(1500px) rotateX(-5deg);
-        box-shadow: rgba(122, 122, 122, 0.514) 0px 25px 50px -12px;
-        transition: transform 1s ease 0s;
+        //transform: perspective(1500px) rotateX(-5deg);
+        //box-shadow: rgba(122, 122, 122, 0.514) 0px 25px 50px -12px;
+        //transition: transform 1s ease 0s;
 
-        &:hover {
+        /*&:hover {
             transform: perspective(3000px) rotateX(5deg);
         }*/
 
@@ -60,7 +61,7 @@
                 position: relative;
                 width: 60%;
                 height: 100%;
-                border-radius: 25px;
+                border-radius: 10px;
                 overflow: hidden;
 
                 .inner {
